// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<NavItem
  tag="li"
>
  <Dropdown
    data-spec="header-dropdown"
    isOpen={true}
    tag="div"
    toggle={[MockFunction]}
  >
    <DropdownToggle
      aria-haspopup={true}
      className="nav-link dropdown-toggle"
      color="secondary"
      data-toggle="dropdown"
    >
      <i
        className="fas fa-plus-circle"
      />
    </DropdownToggle>
    <DropdownMenu
      className="show"
      data-spec="header-dropdown-menu"
      right={true}
      tag="div"
    >
      <HeaderDropdownItem
        data-spec="header-dropdown-upsert-thread-link"
        label="Track New Thread"
        onClick={[Function]}
      />
      <HeaderDropdownItem
        data-spec="header-dropdown-upsert-character-link"
        label="Add Character"
        onClick={[Function]}
      />
    </DropdownMenu>
  </Dropdown>
</NavItem>
`;

exports[`rendering snapshots should render valid snapshot when dropdown is closed 1`] = `
<NavItem
  tag="li"
>
  <Dropdown
    data-spec="header-dropdown"
    isOpen={false}
    tag="div"
    toggle={[MockFunction]}
  >
    <DropdownToggle
      aria-haspopup={true}
      className="nav-link dropdown-toggle"
      color="secondary"
      data-toggle="dropdown"
    >
      <i
        className="fas fa-plus-circle"
      />
    </DropdownToggle>
    <DropdownMenu
      className=""
      data-spec="header-dropdown-menu"
      right={true}
      tag="div"
    >
      <HeaderDropdownItem
        data-spec="header-dropdown-upsert-thread-link"
        label="Track New Thread"
        onClick={[Function]}
      />
      <HeaderDropdownItem
        data-spec="header-dropdown-upsert-character-link"
        label="Add Character"
        onClick={[Function]}
      />
    </DropdownMenu>
  </Dropdown>
</NavItem>
`;
